--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Card from '../components/Card.astro';
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<h1 style="color:red">Hello</h1>
+		<h1 style="color:blue">Hello</h1>
 		<h3>This my project</h3>
 	</main>
 </Layout>
