--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Card from '../components/Card.astro';
 	<main>
 		<h1 style="color:blue">Hello</h1>
 		<h3>This my project</h3>
+		<h4 style="color:white">combo</h4>
 	</main>
 </Layout>
 
