--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -11,7 +11,7 @@ const { href, title, body } = Astro.props;
 <li class="link-card">
 	<a href={href}>
 		<h2>
-			{title}
+			{title} hello
 			<span>&rarr;</span>
 		</h2>
 		<p>
