--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,8 @@ import Card from '../components/Card.astro';
 <Layout title="Welcome to Astro.">
 	<main>
 		<h1 style="color:blue">Hello</h1>
-		<h3>This my project</h3>
-		<h4 style="color:white">combo</h4>
+		<h3 style="color:black">This my project</h3>
+		<h4 style="color:red">combo</h4>
 		bupper
 	</main>
 </Layout>
