--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Card from '../components/Card.astro';
 		<h1 style="color:blue">Hello</h1>
 		<h3 style="color:black">This my project</h3>
 		<h4 style="color:red">combo</h4>
+		<a href="new.astro"><h2>New page</h2></a>
 		bupper
 	</main>
 </Layout>
